# smartargs

./: CMakeLists.txt  LICENSE  README.md  SmartArgsConfig.cmake.in  smartargs.c  smartargs.h
examples/: CMakeLists.txt  advanced_example.c  network_tool.c  simple_example.c
tests/: CMakeLists.txt  test_basic.c  test_errors.c  test_types.c
